OB-20 회원가입 기능 생성

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,4 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.check-template-location=true
 
 #DB(MySQL) Mapper XML Location
-#mybatis.mapper-locations=classpath:mybatis/mappers/**.xml
+mybatis.mapper-locations=classpath:mybatis/mappers/**.xml
