OB-48-자유-게시판-CRUD-기능-추가

--- a/build.gradle
+++ b/build.gradle
@@ -23,20 +23,29 @@ repositories {
 }
 
 dependencies {
+	// thymeleaf
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
 
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// mybatis
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.2'
-	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'com.mysql:mysql-connector-j'
-	annotationProcessor 'org.projectlombok:lombok'
-	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.2'
 
+	// Spring Cloud AWS Starter
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+	// lombok
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+	//
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	// mysql
+	runtimeOnly 'com.mysql:mysql-connector-j'
+	//
+	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+	//
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	// Spring Security
 	implementation "org.springframework.boot:spring-boot-starter-security"
-
 	// CK editor
 	implementation group: 'org.webjars', name: 'ckeditor', version: '4.16.1'
 }
