--- a/build.gradle
+++ b/build.gradle
@@ -23,29 +23,28 @@ repositories {
 }
 
 dependencies {
-	// thymeleaf
+	// Thymeleaf
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-
+	// Spring Web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	// mybatis
-	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.2'
-	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.2'
-
-	// Spring Cloud AWS Starter
-	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+	// Spring DevTools
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	// Spring Security
+	implementation "org.springframework.boot:spring-boot-starter-security"
+	// mysql
+	runtimeOnly 'com.mysql:mysql-connector-j'
 	// lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	//
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	// mysql
-	runtimeOnly 'com.mysql:mysql-connector-j'
-	//
+	// mybatis
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.2'
+	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.2'
+	// SQL Injection
+	implementation 'com.github.rkpunjal.sqlsafe:sql-injection-safe:1.0.2'
+	// Tomcat
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	//
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	// Spring Security
-	implementation "org.springframework.boot:spring-boot-starter-security"
 	// CK editor
 	implementation group: 'org.webjars', name: 'ckeditor', version: '4.16.1'
 }
