OB-57-자유게시판-첨부파일-기능-다운로드-기능-추가

--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,9 @@ dependencies {
 
 	// CK editor
 	implementation group: 'org.webjars', name: 'ckeditor', version: '4.16.1'
+
+	// CONTROL FILE
+	implementation 'commons-io:commons-io:2.6'
 }
 
 tasks.named('test') {
