--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,8 @@ spring.thymeleaf.check-template-location=true
 
 #DB(MySQL) Mapper XML Location
 mybatis.mapper-locations=classpath:mybatis/mappers/**.xml
+
+#FILE UPLOAD
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=100MB
