OB-59-아이디-비밀번호-찾기

--- a/src/main/resources/application-loc.properties
+++ b/src/main/resources/application-loc.properties
@@ -11,7 +11,8 @@ spring.datasource.password=btc49726^&
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #MyBatis
-mybatis.type-aliases-package=com.oneteam.dormease
+mybatis.type-aliases-package=com.oneteam.dormease.user.**
+mybatis.mapper-locations=classpath:mybatis/mappers/**.xml
 
 #Thymeleaf
 spring.thymeleaf.cache=false
@@ -19,8 +20,6 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.check-template-location=true
 
-#DB(MySQL) Mapper XML Location
-mybatis.mapper-locations=classpath:mybatis/mappers/**.xml
 
 #NAVER CLOUD SMS
 naver-cloud-sms.accessKey=ZQiJXUM04FOCcH4idiNl
