OB-73-학생-및-학부모-외박-신청-내역-확인-및-학생-외박-신청-삭제-기능

--- a/src/main/resources/application-loc.properties
+++ b/src/main/resources/application-loc.properties
@@ -11,7 +11,7 @@ spring.datasource.password=btc49726^&
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #MyBatis
-mybatis.type-aliases-package=com.oneteam.dormease.user.**
+mybatis.type-aliases-package=com.oneteam.dormease.**
 mybatis.mapper-locations=classpath:mybatis/mappers/**.xml
 
 #Thymeleaf
