OB-90-Swagger-API-명세서-자동화

--- a/src/main/resources/application-loc.properties
+++ b/src/main/resources/application-loc.properties
@@ -1,5 +1,6 @@
 #Tomcat
 server.port=8090
+server.servlet.session.cookie.name=USER_SESSIONID
 
 #Dev Tools
 spring.devtools.restart.enabled=true
@@ -26,3 +27,15 @@ naver-cloud-sms.accessKey=ZQiJXUM04FOCcH4idiNl
 naver-cloud-sms.secretKey=FW5IdCDrbqn1HzkpxKSGbGS2jyAp6j0ZVdxwNI10
 naver-cloud-sms.serviceId=ncp:sms:kr:314995759590:alertforuser
 naver-cloud-sms.senderPhone=01084976294
+
+
+#Swagger
+springdoc.packages-to-scan=com.oneteam.dormease
+springdoc.default-consumes-media-type=application/json;charset=UTF-8
+springdoc.default-produces-media-type=application/json;charset=UTF-8
+#springdoc.swagger-ui.path=swagger-ui/index.html
+springdoc.swagger-ui.tags-sorter=alpha            
+springdoc.swagger-ui.operations-sorter=alpha      
+springdoc.api-docs.path=/api-docs/json
+springdoc.api-docs.groups.enabled=true
+springdoc.cache.disabled=true
