--- a/src/main/resources/application-loc.properties
+++ b/src/main/resources/application-loc.properties
@@ -1,6 +1,6 @@
 #Tomcat
 server.port=8090
-server.servlet.session.cookie.name=USER_SESSIONID
+server.servlet.session.cookie.name=USER1_SESSIONID
 
 #Dev Tools
 spring.devtools.restart.enabled=true
