--- a/src/main/resources/application-loc.properties
+++ b/src/main/resources/application-loc.properties
@@ -6,9 +6,15 @@ server.servlet.session.cookie.name=USER1_SESSIONID
 spring.devtools.restart.enabled=true
 
 #DB(MySQL) datasource
-spring.datasource.url=jdbc:mysql://dormitorydb.cjz3kjz9u5uz.ap-northeast-2.rds.amazonaws.com:3306/dormease?serverTimezone=Asia/Seoul
-spring.datasource.username=master
-spring.datasource.password=btc49726^&
+#spring.datasource.url=jdbc:mysql://dormitorydb.cjz3kjz9u5uz.ap-northeast-2.rds.amazonaws.com:3306/dormease?serverTimezone=Asia/Seoul
+#spring.datasource.username=master
+#spring.datasource.password=btc49726^&
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.sql.init.mode=always
+spring.datasource.url=jdbc:mysql://${MYSQL_PORT_3306_TCP_ADDR}:${MYSQL_PORT_3306_TCP_PORT}/${MYSQL_DATABASE}
+spring.datasource.username=root
+spring.datasource.password=${MYSQL_ROOT_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #MyBatis
